--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="2">
             >
             <TextView
                 android:id="@+id/text_view_id"
@@ -31,6 +31,8 @@
                 android:layout_width="fill_parent"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
+                android:textColor="#000"
+                android:textSize="32dp"
                 android:layout_weight="1"
                 android:text="Vicotr Chicas"/>
 
@@ -43,46 +45,49 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/index"/>
+                    android:layout_gravity="center"
+                    android:src="@drawable/fb"/>
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
                     android:layout_height="wrap_content"
-                    android:text="Vicotr Chicas"/>
+                    android:text="@Vixtor61"/>
                 <ImageView
                     android:layout_width="0dp"
+                    android:layout_gravity="center"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/index"
-                    android:layout_weight="3"
+                    android:src="@drawable/ig"
+                    android:layout_weight="1"
                     />
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
                     android:layout_height="wrap_content"
-                    android:text="Vicotr Chicas"/>
+                    android:text="@Vixotr61"/>
 
             </LinearLayout>
          <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="0dp"
+             android:orientation="horizontal"
              android:layout_weight="2">
-             <LinearLayout
-                 android:layout_width="fill_parent"
-                 android:layout_height="match_parent"
-                 android:orientation="horizontal">
-                 <ImageView
-                     android:layout_width="0dp"
-                     android:layout_height="wrap_content"
-                     android:layout_weight="1"
-                     android:src="@drawable/index"/>
-                 <TextView
-                     android:layout_width="0dp"
-                     android:gravity="center"
-                     android:layout_gravity="center_vertical"
-                     android:layout_height="wrap_content"
-                     android:text="Vixtor61"
-                     android:layout_weight="2"/>
-             </LinearLayout>
+             <ImageView
+                 android:layout_width="0dp"
+                 android:paddingLeft="120dp"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="1"
+
+                 android:layout_gravity="center"
+                 android:src="@drawable/icon"/>
+             <TextView
+                 android:layout_width="0dp"
+
+                 android:layout_weight="1"
+                 android:layout_gravity="center"
+                 android:layout_height="wrap_content"
+                 android:text="@Vixtor61"/>
 
          </LinearLayout>
         </LinearLayout>
